# amplifier-bundle-wiki-weaver

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DEMO.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
behaviors/: wiki-weaver.yaml
cli/: engine_runner.py  ingest_setup.py  lib.py  wiki_weaver.py
docs/: ANNOUNCEMENT.html
docs/designs/: PHASE_D_SCHEMA_EXTERNALIZATION.md  evolution-plan.md  wiki-weaver-platform.md
eval/: ask_scenarios.yaml  grade_claim_retention.py  grade_wiki.py  model_sweep.py  run_ask_eval.py  run_init_eval.py  test_any_text_ingest.py  test_claim_retention.py  test_grade_synthesis.py  test_ingest_drain.py  test_model_resolver.py  test_policy_fallback.py  test_preflight_gate.py  test_provenance_unit.py  test_text_detection.py  test_transcript_provenance.py  test_updater.py
eval/scenario-05-claim-retention/: README.md  source-a.md  source-b.md
pipeline/: CONVERGENCE_RUBRIC.md  SCHEMA.md  ingest.dot  normalize_links.py  synthesize.dot  validate_wiki.py  wiki-weaver-inner.dot
scripts/: fix_wiki_links.py
wiki_weaver/: __init__.py  __main__.py  cli.py  engine_runner.py  ingest_archive.py  ingest_fail.py  ingest_setup.py  ingest_tamper_check.py  lib.py  model_resolver.py  policy.py  updater.py  wiki_weaver.py
