[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wiki-weaver"
version = "0.1.0"
description = "LLM-wiki ingest pipeline driven by the attractor engine."
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Microsoft Corporation"}]
# Runtime libraries are declared as git deps so `uv tool install git+...` resolves
# them into the isolated tool venv (uv tool venvs do NOT share another tool's site
# packages). Tracked at @main ON PURPOSE: wiki-weaver is a COMPANION to an installed
# Amplifier ecosystem and must stay in lockstep with it, not pinned to a stale commit.
#
# RUNTIME PREREQUISITE (not satisfied by these deps): an Amplifier installation
# (amplifier-app-cli) for ~/.amplifier config + API keys + the warm bundle cache the
# attractor engine loads on first ingest. `wiki-weaver doctor` verifies all of this.
dependencies = [
    "amplifier-foundation @ git+https://github.com/microsoft/amplifier-foundation@main",
    "amplifier-unified-llm-client @ git+https://github.com/microsoft/amplifier-bundle-attractor@main#subdirectory=modules/unified-llm-client",
]

[project.urls]
Repository = "https://github.com/microsoft/amplifier-app-wiki-weaver"

[project.scripts]
wiki-weaver = "wiki_weaver.cli:main"

[tool.hatch.metadata]
# Required so hatchling will build a wheel whose dependencies use direct git URLs.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["wiki_weaver"]

[tool.hatch.build.targets.wheel.force-include]
"pipeline" = "wiki_weaver_pipeline"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
